<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:layout="@layout/uwu_banner_theme"
        android:selectable="false" />
    <PreferenceCategory
        app:title="@string/uwu_theme_settings_title">
        <moe.matsuri.nb4a.ui.ColorPickerPreference
            android:layout="@layout/uwu_top_switch"
            android:title="@string/theme"
            app:icon="@drawable/ic_baseline_color_lens_24"
            app:key="appTheme"
            app:summary="@string/uwu_theme_settings_summary" />
        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:title="@string/pref_dynamic_theme_title"
            android:key="dynamic_theme_switch"
            android:summary="@string/pref_dynamic_theme_summary"
            android:widgetLayout="@layout/uwu_switch"
            android:defaultValue="false"
            app:icon="@drawable/ic_toggle_switch" />
        <com.takisoft.preferencex.SimpleMenuPreference
            android:layout="@layout/uwu_mid"
            app:defaultValue="0"
            app:entries="@array/night_mode"
            app:entryValues="@array/int_array_4"
            app:icon="@drawable/ic_baseline_wb_sunny_24"
            app:key="nightTheme"
            app:title="@string/night_mode"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:title="@string/pref_true_black_title"
            android:key="true_dark_enabled"
            android:summary="@string/pref_true_black_summary"
            android:widgetLayout="@layout/uwu_switch"
            android:defaultValue="false"
            app:icon="@drawable/ic_toggle_switch" />
        <moe.matsuri.nb4a.ui.DpiEditTextPreference
            android:layout="@layout/uwu_mid"
            android:inputType="number"
            app:defaultValue="0"
            app:dialogMessage="@string/pref_custom_dpi_dialog_massage"
            app:icon="@drawable/ic_cellphone_screenshot"
            app:key="custom_dpi"
            app:title="@string/pref_custom_dpi"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:widgetLayout="@layout/uwu_switch"
            android:summaryOn="@string/on"
            android:summaryOff="@string/off"
            app:icon="@drawable/ic_toggle_switch"
            app:key="showBottomBar"
            app:title="@string/show_bottom_bar" />
        <com.takisoft.preferencex.SimpleMenuPreference
            android:layout="@layout/uwu_mid"
            app:defaultValue="1"
            app:entries="@array/fab_style_entry"
            app:entryValues="@array/int_array_2"
            app:icon="@drawable/ic_service_busy"
            app:key="fab_style"
            app:title="@string/fab_style"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:title="@string/pref_font_bold_title"
            android:key="bold_font_switch"
            android:summary="@string/pref_font_bold_summary"
            android:widgetLayout="@layout/uwu_switch"
            android:defaultValue="false"
            app:icon="@drawable/ic_format_font" />
        <SwitchPreference
            android:layout="@layout/uwu_mid_switch"
            android:title="@string/sound_connect_title"
            android:key="sound_connect"
            android:summary="@string/sound_connect_summary"
            android:widgetLayout="@layout/uwu_switch"
            android:defaultValue="true"
            app:icon="@drawable/ic_audio" />
        <com.takisoft.preferencex.SimpleMenuPreference
            android:layout="@layout/uwu_bot"
            app:defaultValue=""
            app:entries="@array/language_entry"
            app:entryValues="@array/language_value"
            app:icon="@drawable/ic_baseline_translate_24"
            app:isPreferenceVisible="true"
            app:key="app_language"
            app:title="@string/language" />
    </PreferenceCategory>
</PreferenceScreen>
