<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:paddingBottom="64.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingStart="16.0dip"
    android:paddingEnd="16.0dip"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBox
        android:textAppearance="@style/TextAppearance.M3.Sys.Typescale.TitleSmall"
        android:textSize="14.0sp"
        android:textColor="?attr/colorOnSurface"
        android:id="@+id/backup_configurations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/backup_groups_and_configurations" />
    <CheckBox
        android:textAppearance="@style/TextAppearance.M3.Sys.Typescale.TitleSmall"
        android:textSize="14.0sp"
        android:textColor="?attr/colorOnSurface"
        android:id="@+id/backup_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/backup_rules" />
    <CheckBox
        android:textAppearance="@style/TextAppearance.M3.Sys.Typescale.TitleSmall"
        android:textSize="14.0sp"
        android:textColor="?attr/colorOnSurface"
        android:id="@+id/backup_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/backup_settings" />
    <Button
        android:textAppearance="@style/TextAppearance.M3.Sys.Typescale.TitleMedium"
        android:textColor="?android:textColorPrimaryInverse"
        android:id="@+id/action_export"
        android:background="@drawable/uwu_bg_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_export"
        style="@style/Widget.AppCompat.Button.Colored" />
    <Button
        android:textAppearance="@style/TextAppearance.M3.Sys.Typescale.TitleMedium"
        android:textColor="?android:textColorPrimaryInverse"
        android:id="@+id/action_share"
        android:background="@drawable/uwu_bg_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:text="@string/share"
        style="@style/Widget.AppCompat.Button.Colored" />
    <TextView
        android:textAppearance="@style/TextAppearance.M3.Sys.Typescale.TitleSmall"
        android:textSize="14.0sp"
        android:textColor="?attr/colorOnSurface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:text="@string/backup_summary" />
    <Button
        android:textAppearance="@style/TextAppearance.M3.Sys.Typescale.TitleMedium"
        android:textColor="?android:textColorPrimaryInverse"
        android:id="@+id/action_import_file"
        android:background="@drawable/uwu_bg_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:text="@string/action_import_file"
        style="@style/Widget.AppCompat.Button.Colored" />
    <Button
        android:textAppearance="@style/TextAppearance.M3.Sys.Typescale.TitleMedium"
        android:textColor="?android:textColorPrimaryInverse"
        android:id="@+id/reset_settings"
        android:background="@drawable/uwu_bg_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:text="@string/reset_settings"
        style="@style/Widget.AppCompat.Button.Colored" />
</LinearLayout>