<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:orientation="vertical"
    android:id="@+id/coordinator"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <include
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/layout_appbar" />
        <LinearLayout
            android:gravity="center"
            android:id="@+id/wait_layout"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:textAppearance="@style/AppearanceFoundation.Title"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stun_attest_loading" />
        </LinearLayout>
        <androidx.core.widget.NestedScrollView
            android:id="@+id/main_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <com.google.android.material.card.MaterialCardView
                    android:focusable="true"
                    android:clickable="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16.0dip"
                    android:layout_marginTop="16.0dip"
                    android:layout_marginRight="16.0dip"
                    app:cardBackgroundColor="?attr/colorCard"
                    app:cardCornerRadius="14.0dip"
                    app:cardElevation="0.0dip">
                    <LinearLayout
                        android:orientation="vertical"
                        android:padding="16.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputLayout
                            android:textAppearance="@style/TextAppearance.M3.Sys.Typescale.TitleMedium"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nat_stun_server_hint"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                            <EditText
                                android:id="@+id/nat_stun_server"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="stun.voipgate.com:3478"
                                android:ems="10"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:focusable="true"
                    android:clickable="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16.0dip"
                    android:layout_marginTop="16.0dip"
                    android:layout_marginRight="16.0dip"
                    app:cardBackgroundColor="?attr/colorCard"
                    app:cardCornerRadius="14.0dip"
                    app:cardElevation="0.0dip">
                    <LinearLayout
                        android:orientation="vertical"
                        android:padding="16.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textAppearance="@style/TextAppearance.M3.Sys.Typescale.TitleMedium"
                            android:textSize="17.0sp"
                            android:textColor="?attr/colorOnSurface"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nat_result_hint" />
                        <TextView
                            android:textAppearance="@style/TextAppearance.M3.Sys.Typescale.TitleSmall"
                            android:textSize="14.0sp"
                            android:textColor="?attr/colorOnSurfaceVariant"
                            android:id="@+id/nat_result"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <LinearLayout
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16.0dip"
                    android:layout_marginRight="16.0dip">
                    <Button
                        android:textAppearance="@style/TextAppearance.M3.Sys.Typescale.TitleSmall"
                        android:textColor="?attr/colorPrimary"
                        android:id="@+id/stunTest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start"
                        android:layout_marginEnd="8.0dip"
                        style="@style/Widget.AppCompat.Button.Borderless" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>